# Changelog
All notable changes to ReVens.

--------------------------

## [1.4.1] (Pre-release) - 17-11-2025

### Updated

- Improved main UI
- Updated Packages downloader
- Updated Builder & Installer
- Refactoring Backend

### Added

- Added Cleanup scripts

--------------------------

## [1.3.0] (Pre-release) - 16-11-2025

### Fixed

- Fixed JSON-based packages manager
- Fixed Modals UI (CSS)

### Removed

- Removed default-initialized INI files

### Added

- Added test & fix /scripts
- Added ReverseKit
- Added Search feature
- Added WebAssembly Binary Toolkit
- Added direct download URLs for packages (GitHub & Trusted sources)

--------------------------

## [1.2.1] (Pre-release) - 10-02-2025

### Updated

- Updated Electron.js (v29.4.6)

--------------------------

## [1.0.2] (Pre-release) - 31-03-2024

### Updated

- Updated Electron.js (v29.1.6)

--------------------------

## [1.0.1] (Pre-release) - 03-11-2023

### Updated

- Updated packages

--------------------------

## [1.0.0] 13-04-2023

### Init