@@ -17,7 +17,7 @@ const Head = () => (
   <Helmet>
     <meta charSet="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>{config.name} - {config.desctiption}</title>
+    <title>{config.name} - {config.description || config.desctiption}</title>
   </Helmet>
 );
 
